RESOLVED FIXED235483
REGRESSION(r280887) broke some svg based chart content repaint
https://bugs.webkit.org/show_bug.cgi?id=235483
Summary REGRESSION(r280887) broke some svg based chart content repaint
alan
Reported 2022-01-22 15:28:26 PST
ssia
Attachments
Patch (1.91 KB, patch)
2022-01-22 15:33 PST, alan
no flags
alan
Comment 1 2022-01-22 15:28:45 PST
alan
Comment 2 2022-01-22 15:33:40 PST
EWS
Comment 3 2022-01-22 21:02:46 PST
Committed r288415 (246306@main): <https://commits.webkit.org/246306@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449738 [details].
Note You need to log in before you can comment on or make changes to this bug.