REGRESSION(r280887) broke some svg based chart content repaint https://bugs.webkit.org/show_bug.cgi?id=235483 <rdar://87904254>

Unreviewed, reverting r280887.


* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::svgAttributeChanged):



Canonical link: https://commits.webkit.org/246306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288415 268f45cc-cd09-0410-ab3c-d52691b4dbfc